<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cloudimpl</groupId>
    <artifactId>cloudimpl</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>threadPool</module>
        <module>VirtualMachine</module>
        <module>Plugins</module>
        <module>Raft</module>
        <module>Services</module>
        <module>Core</module>
        <module>Msgs</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.mina</groupId>
            <artifactId>mina-core</artifactId>
            <version>2.0.9</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <!--                <configuration>
                    <argLine>-Djava.ext.dirs="%UST_HOME%\tplibs";"%UST_HOME%\sharedDependancies\target";"%UST_HOME%\authPlugin\target";"%UST_HOME%\gatePlugin\target";"%UST_HOME%\matchPlugin\target";"%UST_HOME%\mktfeedPlugin\target";"%UST_HOME%\mmPlugin\target";"%UST_HOME%\portPlugin\target";"%UST_HOME%\sharedMsgs\target";"%UST_HOME%\sharedutil\target";"%UST_HOME%\tvmServiceProvider\target";"%UST_HOME%\registerPlugin\target";"%UST_HOME%\feedConnectionPlugin\target";"%UST_HOME%\paymentGWPlugin\target";"%UST_HOME%\serviceAPI\target";"%UST_HOME%\serviceActiveTick\target";"%UST_HOME%\serviceRecaptcha\target";"%UST_HOME%\serviceFeedSimulator\target";"%UST_HOME%\corp-action-plugin\target";"%UST_HOME%\NasdaqCorpActions\target";"%UST_HOME%\newsFeedPlugin\target";"${java.home}"/lib/ext </argLine>
                </configuration>-->
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>2.17</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
        
    </build>

</project>